Fixed overlapping background with scroll bar

--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,6 @@ body {
   padding: 0;
   height: 100%;
   color: white;
-  background: #0003b1;
   overflow-x: hidden;
   overflow-y: auto;
   position: relative;
@@ -33,6 +32,8 @@ body {
   height: 150vh;
   overflow: hidden;
   pointer-events: none;
+  background: #0003b1;
+  z-index : -1;
 }
 
 .hex {
